Updates all of phase 1.
